docs: :art: finish Account doc
